update github link and top bar

--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=DP-Drl4AAAAJ&hl=en&authuser=1"
   email            : "zhengxio@ualberta.ca"
-  researchgate     :  "https://www.researchgate.net/profile/Zhengxiong-Li-3"
+  researchgate     : "https://www.researchgate.net/profile/Zhengxiong-Li-3"
   uri              :
   bitbucket        :
   codepen          :
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/zhengxiongli08"
+  github           : "zhengxiongli08"
   google_plus      :
   keybase          :
   instagram        :
