remove useless file

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Zhengxiong Li @ WHU"
+title                    : "Zhengxiong Li"
 title_separator          : "-"
 name                     : &name "Zhengxiong Li"
 description              : &description "Senior Undergraduate Student"
