--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=DP-Drl4AAAAJ&hl=en&authuser=1"
-  email            : "zhengxio@ualberta.ca"
+  email            : "zhengxiongli2024@outlook.com"
   researchgate     : "https://www.researchgate.net/profile/Zhengxiong-Li-3"
   uri              :
   bitbucket        :
