--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zhengxiong Li"
-  avatar           : "avatar.png"
+  avatar           : "avatar.JPG"
   bio              : "Senior Undergraduate Student"
   location         : "Wuhan, China"
   employer         :
